# netkit

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: netkitConfig.cmake.in
docs/: Doxyfile
examples/c/socket/: CMakeLists.txt  main.c
examples/c/socket_ssl/: CMakeLists.txt  main.c
examples/cpp/file_server/: CMakeLists.txt  main.cpp
examples/cpp/http_client/: CMakeLists.txt  main.cpp
examples/cpp/http_server/: main.cpp
examples/cpp/http_server_param/: main.cpp
examples/cpp/network_interface/: main.cpp
examples/cpp/socket/: main.cpp
examples/cpp/socket_ssl/: main.cpp
examples/cpp/uds_server/: CMakeLists.txt  main.cpp
examples/file_server/: .gitignore  main.cpp
examples/http_client/: main.cpp
examples/http_server/: CMakeLists.txt  main.cpp
examples/http_server_param/: CMakeLists.txt  main.cpp
examples/network_interface/: main.cpp
examples/socket/: main.cpp
examples/socket_ssl/: main.cpp
include/netkit/: definitions.hpp  except.hpp  export.hpp  netkit.hpp  utility.hpp
include/netkit-c/: definitions.h  export.h
include/netkit-c/network/: utility.h
include/netkit-c/sock/: sock_addr.h  sock_addr_types.h  sock_types.h  sync_sock.h
include/netkit-c/sock/openssl/: ssl_sync_sock.h
include/netkit/crypto/windows/: certs.hpp
include/netkit/dns/: cache.hpp  nameserver_list.hpp  query_builder.hpp  record_type.hpp  response_parser.hpp  sync_resolver.hpp
include/netkit/http/: basic_request_handler.hpp  basic_sync_server.hpp  body_parser.hpp  predefined.hpp  request_handler.hpp  response.hpp  server_predefined.hpp  sync_client.hpp  sync_server.hpp
include/netkit/network/: ip_list.hpp  local_address.hpp  network_interface.hpp  utility.hpp
include/netkit/sock/: addr.hpp  addr_type.hpp  basic_sync_sock.hpp  ip_list.hpp  sock_addr.hpp  sock_addr_type.hpp  sock_peer.hpp  sync_sock.hpp
include/netkit/sock/openssl/: ssl_sync_sock.hpp
src/: utility.cpp
src/c/: netkit.cpp
src/c/network/: utility.cpp
src/c/sock/: addr.cpp  sock_addr.cpp  sync_sock.cpp
src/c/sock/openssl/: ssl_sync_sock.cpp
src/crypto/windows/: certs.cpp
src/dns/: cache.cpp  nameserver_list.cpp  query_builder.cpp  record_type.cpp  response_parser.cpp
src/http/: predefined.cpp  sync_client.cpp
src/network/: ip_list.cpp  local_address.cpp  network_interface.cpp  utility.cpp
src/sock/: addr.cpp  sock_addr.cpp  sock_peer.cpp  sync_sock.cpp
src/sock/openssl/: ssl_sync_sock_openssl.cpp
src/windows/: windows_boilerplate.cpp
tests/: test.cpp
tests/c/: definitions.h  test_main.c  test_network_utility.c  test_network_utility.h  test_sock_addr.c  test_sock_addr.h
